src/css/MSN.css
/* ... */
.enter_text_div button:active {
    border: 2px solid black;
    border-right-color: white;
    border-bottom-color: white;
}

.status_div {
    position: relative;
    height: 22px;
    width: calc(100% - 19px);
    border: 2px solid rgb(125, 116, 116);
    border-right-color: #ebe9e9;
    border-bottom-color: #ebe9e9;
    margin: 0 auto;
    top: 8px;
}

.status_div p {
    font-size: 13px;
    padding-left: 2px;
    color: rgb(50, 49, 49);
}

.Username_input_div_active {
    display: grid;
    place-items: center;
    position: absolute;
    top: 1.53rem;
    width: 100%;
    height: 100%;
    background: #09090970;
    z-index: 98;
}

.Username_input_div_disabled {
    display: none;
}

.Username_input_div_active .container_username {
    position: relative;
    width: 280px;
    height: 160px;
    background: #c5c4c4;
    border: 1px solid white;
    border-right: 1px solid black;
    border-bottom: 1px solid black;
    outline: 1px solid white;
    overflow: hidden;
}

.Username_input_div_active .form_banner {
   width: calc(100% - 20px);
   height: 25px;
}

.form_banner {
    display: flex;
    align-items: center;
    position: relative;
    height: 22px!important;
    width: 100%!important;
}

.form_banner img {
    width: 21px;
}

.form_banner .username_text_banner {
    position: relative;
    color: white;
    font-size: 13px;
    padding-left: 2px;
}

.form_banner .close_form_banner {
    position: absolute;
    width: 15px;
    height: 15px;
    border: 2px solid white;
    border-right-color: black;
    border-bottom-color: black;
    background: #c5c4c4;
    text-align: center;
    right: 3px;
    cursor: default;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.form_banner .close_form_banner:active {
    border: 1px solid black;
    border-right-color: white;
    border-bottom-color: white;
}

.form_banner .close_form_banner p {
    position: relative;
    bottom: 7px;
    left: 0.5px;
    font-size: 16px;
}
@supports (-webkit-touch-callout: none) {
    .form_banner .close_form_banner p {
        bottom: 7px;
        left: 0.5px;
    }
}

.Username_input_div_active form {
    display: grid;
    position: relative;
    width: 85%;
    top: 1.8rem;
    margin: 0 auto;
}

.Username_input_div_active form p {
    position: relative;
    font-size: 12px;
    text-align: start;
    padding-bottom: 2px;
    left: 1px;
}

.Username_input_div_active input {
    width: 100%;
    height: 25px;
    font-size: 13px;
    padding-left: 4px;
    border: 2px solid black;
    border-right-color: white;
    border-bottom-color: white;
    border-radius: 0
}

.Username_input_div_active .ok_cancel_username {
    display: flex;
    position: relative;
    width: 100%;
    justify-content: flex-end;
    gap: 4px;
    top: 10px;
}

.Username_input_div_active .ok_cancel_username button {
    position: relative;
    top: 10px;
    padding: 3px 9px;
    font-size: 12px;
    border: 2px solid white;
    border-right-color: black;
    border-bottom-color: black;
    color: black;
}

.Username_input_div_active .ok_cancel_username button:active {
    border: 2px solid black;
    border-right-color: white;
    border-bottom-color: white;
}

.reconnect_container {
    position: fixed;
    width: 95%;
    height: 50px;
    top: 50%;
    transform: translateY(-50%);
    text-align: center;
    z-index: 55555555555555555;
}
.reconnect_container p {
    position: relative;
    top: 1rem;
    color: rgb(220, 219, 219);
    cursor: pointer;
    z-index: 55555555555555555;
}

.reconnect_container p:hover {
    color: rgb(41, 41, 237);
}

@media screen and (-webkit-min-device-pixel-ratio:0) and (min-resolution: .001dpcm) and (min-width: 0px) {
    .folder_barbtn-MSN .x-MSN {      
        left: 1px;
    }
}

.shake_message {
    display: grid;
    place-items: center;
    position: relative;
    width: 34px;
    height: 30px;
    border: 2px solid white;
    border-right-color: black;
    border-bottom-color: black;
    margin-left: 2px;
}

.shake_message img {
    position: relative;
    width: 85%;
    bottom: 1.5px;
}

.shake_message:active {
    border: 2px solid black;
    border-right-color: white;
    border-bottom-color: white;
}

.chat_date {
    opacity: 0;
    position: absolute;
    padding: 2px 4px;
    background: #1b1818f7;
    border-radius: 2px;
    color: rgb(212, 205, 205);
    font-size: 11px;
    z-index: 1;
}



@media screen and (width <= 500px) {
    .chat_date {
        width: 100%;
        background: transparent;
        color: black;
        text-align: end;
    }

    .mobile_chat_date {
        padding: 4px 4px;
        background: #1b1818f7;
        border-radius: 2px;
        font-size: 11px;
        color: rgb(212, 205, 205);
    }
}

@keyframes msnShake {
  0%   { margin-left: 0; }
  5%   { margin-left: -10px; }
  10%  { margin-left: 10px; }
  15%  { margin-left: -10px; }
  20%  { margin-left: 10px; }
  35%  { margin-left: -8px; }
  40%  { margin-left: 8px; }
  45%  { margin-left: -6px; }
  50%  { margin-left: 6px; }
  70%  { margin-left: -4px; }
  80%  { margin-left: 4px; }
  90%  { margin-left: -2px; }
  100% { margin-left: 0; }
}

